// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildCcsLogsExtractionEsqlQuery generates expected query for host entity type 1`] = `
"SET unmapped_fields=\\"nullify\\";
FROM remote:metrics-*
  | WHERE
      @timestamp >= TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
      AND (TO_STRING(host.id) IS NOT NULL AND TO_STRING(host.id) != \\"\\" OR TO_STRING(host.name) IS NOT NULL AND TO_STRING(host.name) != \\"\\" OR TO_STRING(host.hostname) IS NOT NULL AND TO_STRING(host.hostname) != \\"\\")
| EVAL _src_entity_source0 = MV_FIRST(TO_STRING(event.module)),
 _src_entity_source1 = MV_FIRST(TO_STRING(event.dataset)),
 _src_entity_source2 = MV_FIRST(TO_STRING(data_stream.dataset)),
 _src_entity_source = COALESCE(CASE(_src_entity_source0 IS NOT NULL AND _src_entity_source0 != \\"\\", _src_entity_source0), CASE(_src_entity_source1 IS NOT NULL AND _src_entity_source1 != \\"\\", _src_entity_source1), CASE(_src_entity_source2 IS NOT NULL AND _src_entity_source2 != \\"\\", _src_entity_source2)),
 entity.source = CASE(_src_entity_source IS NULL OR _src_entity_source == \\"\\", NULL, _src_entity_source),
 host_id_present = TO_STRING(host.id) IS NOT NULL AND TO_STRING(host.id) != \\"\\",
 host_name_present = TO_STRING(host.name) IS NOT NULL AND TO_STRING(host.name) != \\"\\",
 host_hostname_present = TO_STRING(host.hostname) IS NOT NULL AND TO_STRING(host.hostname) != \\"\\",
 host_id_present_or_null = CASE(host_id_present, TO_STRING(host.id)),
 host_name_present_or_null = CASE(host_name_present, TO_STRING(host.name)),
 host_hostname_present_or_null = CASE(host_hostname_present, TO_STRING(host.hostname)),
 entity.id = CONCAT(\\"host:\\", COALESCE(host_id_present_or_null, host_name_present_or_null, host_hostname_present_or_null))
| STATS
    @timestamp = MAX(@timestamp),
    entity.EngineMetadata.FirstSeenLogInPage = MIN(@timestamp),
    entity.name = LAST(TO_STRING(host.name), @timestamp) WHERE TO_STRING(host.name) IS NOT NULL,
 host.entity.id = FIRST(TO_STRING(host.entity.id), @timestamp) WHERE TO_STRING(host.entity.id) IS NOT NULL,
 host.name = VALUES(TO_STRING(host.name)),
 host.domain = VALUES(TO_STRING(host.domain)),
 host.hostname = VALUES(TO_STRING(host.hostname)),
 host.id = VALUES(TO_STRING(host.id)),
 host.os.name = VALUES(TO_STRING(host.os.name)),
 host.os.type = VALUES(TO_STRING(host.os.type)),
 host.ip = VALUES(TO_IP(host.ip)),
 host.mac = VALUES(TO_STRING(host.mac)),
 host.type = VALUES(TO_STRING(host.type)),
 host.architecture = VALUES(TO_STRING(host.architecture)),
 host.boot.id = LAST(TO_STRING(host.boot.id), @timestamp) WHERE TO_STRING(host.boot.id) IS NOT NULL,
 host.cpu.usage = LAST(host.cpu.usage, @timestamp) WHERE host.cpu.usage IS NOT NULL,
 host.disk.read.bytes = LAST(TO_LONG(host.disk.read.bytes), @timestamp) WHERE TO_LONG(host.disk.read.bytes) IS NOT NULL,
 host.disk.write.bytes = LAST(TO_LONG(host.disk.write.bytes), @timestamp) WHERE TO_LONG(host.disk.write.bytes) IS NOT NULL,
 host.network.egress.bytes = LAST(TO_LONG(host.network.egress.bytes), @timestamp) WHERE TO_LONG(host.network.egress.bytes) IS NOT NULL,
 host.network.egress.packets = LAST(TO_LONG(host.network.egress.packets), @timestamp) WHERE TO_LONG(host.network.egress.packets) IS NOT NULL,
 host.network.ingress.bytes = LAST(TO_LONG(host.network.ingress.bytes), @timestamp) WHERE TO_LONG(host.network.ingress.bytes) IS NOT NULL,
 host.network.ingress.packets = LAST(TO_LONG(host.network.ingress.packets), @timestamp) WHERE TO_LONG(host.network.ingress.packets) IS NOT NULL,
 host.uptime = LAST(TO_LONG(host.uptime), @timestamp) WHERE TO_LONG(host.uptime) IS NOT NULL,
 host.pid_ns_ino = LAST(TO_STRING(host.pid_ns_ino), @timestamp) WHERE TO_STRING(host.pid_ns_ino) IS NOT NULL,
 host.os.family = LAST(TO_STRING(host.os.family), @timestamp) WHERE TO_STRING(host.os.family) IS NOT NULL,
 host.os.full = LAST(TO_STRING(host.os.full), @timestamp) WHERE TO_STRING(host.os.full) IS NOT NULL,
 host.os.kernel = LAST(TO_STRING(host.os.kernel), @timestamp) WHERE TO_STRING(host.os.kernel) IS NOT NULL,
 host.os.platform = LAST(TO_STRING(host.os.platform), @timestamp) WHERE TO_STRING(host.os.platform) IS NOT NULL,
 host.os.version = LAST(TO_STRING(host.os.version), @timestamp) WHERE TO_STRING(host.os.version) IS NOT NULL,
 host.geo.city_name = LAST(TO_STRING(host.geo.city_name), @timestamp) WHERE TO_STRING(host.geo.city_name) IS NOT NULL,
 host.geo.continent_code = LAST(TO_STRING(host.geo.continent_code), @timestamp) WHERE TO_STRING(host.geo.continent_code) IS NOT NULL,
 host.geo.continent_name = LAST(TO_STRING(host.geo.continent_name), @timestamp) WHERE TO_STRING(host.geo.continent_name) IS NOT NULL,
 host.geo.country_iso_code = LAST(TO_STRING(host.geo.country_iso_code), @timestamp) WHERE TO_STRING(host.geo.country_iso_code) IS NOT NULL,
 host.geo.country_name = LAST(TO_STRING(host.geo.country_name), @timestamp) WHERE TO_STRING(host.geo.country_name) IS NOT NULL,
 host.geo.name = VALUES(TO_STRING(host.geo.name)),
 host.geo.postal_code = VALUES(TO_STRING(host.geo.postal_code)),
 host.geo.region_iso_code = VALUES(TO_STRING(host.geo.region_iso_code)),
 host.geo.region_name = VALUES(TO_STRING(host.geo.region_name)),
 host.geo.timezone = VALUES(TO_STRING(host.geo.timezone)),
 cloud.provider = LAST(TO_STRING(cloud.provider), @timestamp) WHERE TO_STRING(cloud.provider) IS NOT NULL,
 cloud.region = LAST(TO_STRING(cloud.region), @timestamp) WHERE TO_STRING(cloud.region) IS NOT NULL,
 cloud.instance.id = LAST(TO_STRING(cloud.instance.id), @timestamp) WHERE TO_STRING(cloud.instance.id) IS NOT NULL,
 cloud.machine.type = LAST(TO_STRING(cloud.machine.type), @timestamp) WHERE TO_STRING(cloud.machine.type) IS NOT NULL,
 agent.id = LAST(TO_STRING(agent.id), @timestamp) WHERE TO_STRING(agent.id) IS NOT NULL,
 agent.type = LAST(TO_STRING(agent.type), @timestamp) WHERE TO_STRING(agent.type) IS NOT NULL,
 endpoint.id = LAST(TO_STRING(endpoint.id), @timestamp) WHERE TO_STRING(endpoint.id) IS NOT NULL,
 asset.id = LAST(TO_STRING(asset.id), @timestamp) WHERE TO_STRING(asset.id) IS NOT NULL,
 asset.name = LAST(TO_STRING(asset.name), @timestamp) WHERE TO_STRING(asset.name) IS NOT NULL,
 asset.owner = LAST(TO_STRING(asset.owner), @timestamp) WHERE TO_STRING(asset.owner) IS NOT NULL,
 asset.serial_number = LAST(TO_STRING(asset.serial_number), @timestamp) WHERE TO_STRING(asset.serial_number) IS NOT NULL,
 asset.model = LAST(TO_STRING(asset.model), @timestamp) WHERE TO_STRING(asset.model) IS NOT NULL,
 asset.vendor = LAST(TO_STRING(asset.vendor), @timestamp) WHERE TO_STRING(asset.vendor) IS NOT NULL,
 asset.environment = LAST(TO_STRING(asset.environment), @timestamp) WHERE TO_STRING(asset.environment) IS NOT NULL,
 asset.criticality = LAST(TO_STRING(asset.criticality), @timestamp) WHERE TO_STRING(asset.criticality) IS NOT NULL,
 asset.business_unit = LAST(TO_STRING(asset.business_unit), @timestamp) WHERE TO_STRING(asset.business_unit) IS NOT NULL,
 entity.risk.calculated_level = LAST(TO_STRING(host.risk.calculated_level), @timestamp) WHERE TO_STRING(host.risk.calculated_level) IS NOT NULL,
 entity.risk.calculated_score = LAST(TO_DOUBLE(host.risk.calculated_score), @timestamp) WHERE TO_DOUBLE(host.risk.calculated_score) IS NOT NULL,
 entity.risk.calculated_score_norm = LAST(TO_DOUBLE(host.risk.calculated_score_norm), @timestamp) WHERE TO_DOUBLE(host.risk.calculated_score_norm) IS NOT NULL,
 event.module = VALUES(TO_STRING(event.module)),
 event.dataset = VALUES(TO_STRING(event.dataset)),
 data_stream.dataset = VALUES(TO_STRING(data_stream.dataset)),
 entity.source = VALUES(TO_STRING(entity.source)),
 entity.type = LAST(TO_STRING(host.entity.type), @timestamp) WHERE TO_STRING(host.entity.type) IS NOT NULL,
 entity.sub_type = LAST(TO_STRING(host.entity.sub_type), @timestamp) WHERE TO_STRING(host.entity.sub_type) IS NOT NULL,
 entity.url = LAST(TO_STRING(host.entity.url), @timestamp) WHERE TO_STRING(host.entity.url) IS NOT NULL,
 entity.attributes.watchlists = VALUES(TO_STRING(host.entity.attributes.watchlists)),
 entity.attributes.asset = LAST(TO_BOOLEAN(host.entity.attributes.asset), @timestamp) WHERE TO_BOOLEAN(host.entity.attributes.asset) IS NOT NULL,
 entity.attributes.managed = LAST(TO_BOOLEAN(host.entity.attributes.managed), @timestamp) WHERE TO_BOOLEAN(host.entity.attributes.managed) IS NOT NULL,
 entity.attributes.mfa_enabled = LAST(TO_BOOLEAN(host.entity.attributes.mfa_enabled), @timestamp) WHERE TO_BOOLEAN(host.entity.attributes.mfa_enabled) IS NOT NULL,
 entity.attributes.storage_class = LAST(TO_STRING(host.entity.attributes.storage_class), @timestamp) WHERE TO_STRING(host.entity.attributes.storage_class) IS NOT NULL,
 entity.attributes.permissions = VALUES(TO_STRING(host.entity.attributes.permissions)),
 entity.attributes.known_redirects = VALUES(TO_STRING(host.entity.attributes.known_redirects)),
 entity.attributes.oauth_consent_restriction = LAST(TO_STRING(host.entity.attributes.oauth_consent_restriction), @timestamp) WHERE TO_STRING(host.entity.attributes.oauth_consent_restriction) IS NOT NULL,
 entity.lifecycle.first_seen = FIRST(@timestamp, @timestamp) WHERE @timestamp IS NOT NULL,
 entity.lifecycle.last_seen = LAST(@timestamp, @timestamp) WHERE @timestamp IS NOT NULL,
 entity.lifecycle.last_activity = LAST(TO_DATETIME(host.entity.lifecycle.last_activity), @timestamp) WHERE TO_DATETIME(host.entity.lifecycle.last_activity) IS NOT NULL,
 entity.behaviors.rule_names = VALUES(TO_STRING(host.entity.behaviors.rule_names)),
 entity.behaviors.anomaly_job_ids = VALUES(TO_STRING(host.entity.behaviors.anomaly_job_ids)),
 entity.relationships.administers.raw_identifiers.host.id = VALUES(TO_STRING(host.entity.relationships.administers.host.id)),
 entity.relationships.administers.raw_identifiers.user.id = VALUES(TO_STRING(host.entity.relationships.administers.user.id)),
 entity.relationships.administers.raw_identifiers.user.email = VALUES(TO_STRING(host.entity.relationships.administers.user.email)),
 entity.relationships.administers.raw_identifiers.host.name = VALUES(TO_STRING(host.entity.relationships.administers.host.name)),
 entity.relationships.administers.raw_identifiers.user.name = VALUES(TO_STRING(host.entity.relationships.administers.user.name)),
 entity.relationships.administers.raw_identifiers.service.name = VALUES(TO_STRING(host.entity.relationships.administers.service.name)),
 entity.relationships.administers.ids = VALUES(TO_STRING(host.entity.relationships.administers.entity.id)),
 entity.relationships.communicates_with.raw_identifiers.host.id = VALUES(TO_STRING(host.entity.relationships.communicates_with.host.id)),
 entity.relationships.communicates_with.raw_identifiers.user.id = VALUES(TO_STRING(host.entity.relationships.communicates_with.user.id)),
 entity.relationships.communicates_with.raw_identifiers.user.email = VALUES(TO_STRING(host.entity.relationships.communicates_with.user.email)),
 entity.relationships.communicates_with.raw_identifiers.host.name = VALUES(TO_STRING(host.entity.relationships.communicates_with.host.name)),
 entity.relationships.communicates_with.raw_identifiers.user.name = VALUES(TO_STRING(host.entity.relationships.communicates_with.user.name)),
 entity.relationships.communicates_with.raw_identifiers.service.name = VALUES(TO_STRING(host.entity.relationships.communicates_with.service.name)),
 entity.relationships.communicates_with.ids = VALUES(TO_STRING(host.entity.relationships.communicates_with.entity.id)),
 entity.relationships.depends_on.raw_identifiers.host.id = VALUES(TO_STRING(host.entity.relationships.depends_on.host.id)),
 entity.relationships.depends_on.raw_identifiers.user.id = VALUES(TO_STRING(host.entity.relationships.depends_on.user.id)),
 entity.relationships.depends_on.raw_identifiers.user.email = VALUES(TO_STRING(host.entity.relationships.depends_on.user.email)),
 entity.relationships.depends_on.raw_identifiers.host.name = VALUES(TO_STRING(host.entity.relationships.depends_on.host.name)),
 entity.relationships.depends_on.raw_identifiers.user.name = VALUES(TO_STRING(host.entity.relationships.depends_on.user.name)),
 entity.relationships.depends_on.raw_identifiers.service.name = VALUES(TO_STRING(host.entity.relationships.depends_on.service.name)),
 entity.relationships.depends_on.ids = VALUES(TO_STRING(host.entity.relationships.depends_on.entity.id)),
 entity.relationships.owns_inferred.raw_identifiers.host.id = VALUES(TO_STRING(host.entity.relationships.owns_inferred.host.id)),
 entity.relationships.owns_inferred.raw_identifiers.user.id = VALUES(TO_STRING(host.entity.relationships.owns_inferred.user.id)),
 entity.relationships.owns_inferred.raw_identifiers.user.email = VALUES(TO_STRING(host.entity.relationships.owns_inferred.user.email)),
 entity.relationships.owns_inferred.raw_identifiers.host.name = VALUES(TO_STRING(host.entity.relationships.owns_inferred.host.name)),
 entity.relationships.owns_inferred.raw_identifiers.user.name = VALUES(TO_STRING(host.entity.relationships.owns_inferred.user.name)),
 entity.relationships.owns_inferred.raw_identifiers.service.name = VALUES(TO_STRING(host.entity.relationships.owns_inferred.service.name)),
 entity.relationships.owns_inferred.ids = VALUES(TO_STRING(host.entity.relationships.owns_inferred.entity.id)),
 entity.relationships.accesses_infrequently.raw_identifiers.host.id = VALUES(TO_STRING(host.entity.relationships.accesses_infrequently.host.id)),
 entity.relationships.accesses_infrequently.raw_identifiers.user.id = VALUES(TO_STRING(host.entity.relationships.accesses_infrequently.user.id)),
 entity.relationships.accesses_infrequently.raw_identifiers.user.email = VALUES(TO_STRING(host.entity.relationships.accesses_infrequently.user.email)),
 entity.relationships.accesses_infrequently.raw_identifiers.host.name = VALUES(TO_STRING(host.entity.relationships.accesses_infrequently.host.name)),
 entity.relationships.accesses_infrequently.raw_identifiers.user.name = VALUES(TO_STRING(host.entity.relationships.accesses_infrequently.user.name)),
 entity.relationships.accesses_infrequently.raw_identifiers.service.name = VALUES(TO_STRING(host.entity.relationships.accesses_infrequently.service.name)),
 entity.relationships.accesses_infrequently.ids = VALUES(TO_STRING(host.entity.relationships.accesses_infrequently.entity.id)),
 entity.relationships.accesses_frequently.raw_identifiers.host.id = VALUES(TO_STRING(host.entity.relationships.accesses_frequently.host.id)),
 entity.relationships.accesses_frequently.raw_identifiers.user.id = VALUES(TO_STRING(host.entity.relationships.accesses_frequently.user.id)),
 entity.relationships.accesses_frequently.raw_identifiers.user.email = VALUES(TO_STRING(host.entity.relationships.accesses_frequently.user.email)),
 entity.relationships.accesses_frequently.raw_identifiers.host.name = VALUES(TO_STRING(host.entity.relationships.accesses_frequently.host.name)),
 entity.relationships.accesses_frequently.raw_identifiers.user.name = VALUES(TO_STRING(host.entity.relationships.accesses_frequently.user.name)),
 entity.relationships.accesses_frequently.raw_identifiers.service.name = VALUES(TO_STRING(host.entity.relationships.accesses_frequently.service.name)),
 entity.relationships.accesses_frequently.ids = VALUES(TO_STRING(host.entity.relationships.accesses_frequently.entity.id)),
 entity.relationships.owns.raw_identifiers.host.id = VALUES(TO_STRING(host.entity.relationships.owns.host.id)),
 entity.relationships.owns.raw_identifiers.user.id = VALUES(TO_STRING(host.entity.relationships.owns.user.id)),
 entity.relationships.owns.raw_identifiers.user.email = VALUES(TO_STRING(host.entity.relationships.owns.user.email)),
 entity.relationships.owns.raw_identifiers.host.name = VALUES(TO_STRING(host.entity.relationships.owns.host.name)),
 entity.relationships.owns.raw_identifiers.user.name = VALUES(TO_STRING(host.entity.relationships.owns.user.name)),
 entity.relationships.owns.raw_identifiers.service.name = VALUES(TO_STRING(host.entity.relationships.owns.service.name)),
 entity.relationships.owns.ids = VALUES(TO_STRING(host.entity.relationships.owns.entity.id)),
 entity.relationships.supervises.raw_identifiers.host.id = VALUES(TO_STRING(host.entity.relationships.supervises.host.id)),
 entity.relationships.supervises.raw_identifiers.user.id = VALUES(TO_STRING(host.entity.relationships.supervises.user.id)),
 entity.relationships.supervises.raw_identifiers.user.email = VALUES(TO_STRING(host.entity.relationships.supervises.user.email)),
 entity.relationships.supervises.raw_identifiers.host.name = VALUES(TO_STRING(host.entity.relationships.supervises.host.name)),
 entity.relationships.supervises.raw_identifiers.user.name = VALUES(TO_STRING(host.entity.relationships.supervises.user.name)),
 entity.relationships.supervises.raw_identifiers.service.name = VALUES(TO_STRING(host.entity.relationships.supervises.service.name)),
 entity.relationships.supervises.ids = VALUES(TO_STRING(host.entity.relationships.supervises.entity.id)),
 entity.relationships.resolution.resolved_to = LAST(TO_STRING(host.entity.relationships.resolution.resolved_to), @timestamp) WHERE TO_STRING(host.entity.relationships.resolution.resolved_to) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_level = LAST(TO_STRING(host.entity.relationships.resolution.risk.calculated_level), @timestamp) WHERE TO_STRING(host.entity.relationships.resolution.risk.calculated_level) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_score = LAST(TO_DOUBLE(host.entity.relationships.resolution.risk.calculated_score), @timestamp) WHERE TO_DOUBLE(host.entity.relationships.resolution.risk.calculated_score) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_score_norm = LAST(TO_DOUBLE(host.entity.relationships.resolution.risk.calculated_score_norm), @timestamp) WHERE TO_DOUBLE(host.entity.relationships.resolution.risk.calculated_score_norm) IS NOT NULL
    BY entity.id
| KEEP entity*,
host*,
cloud*,
agent*,
endpoint*,
asset*,
event*,
data_stream*,
@timestamp
| SORT entity.EngineMetadata.FirstSeenLogInPage ASC, entity.id ASC
| LIMIT 5000"
`;

exports[`buildCcsLogsExtractionEsqlQuery generates expected query with log-slice cursor bounds 1`] = `
"SET unmapped_fields=\\"nullify\\";
FROM remote:logs-*
  | WHERE
      @timestamp >= TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
      AND (TO_STRING(host.id) IS NOT NULL AND TO_STRING(host.id) != \\"\\" OR TO_STRING(host.name) IS NOT NULL AND TO_STRING(host.name) != \\"\\" OR TO_STRING(host.hostname) IS NOT NULL AND TO_STRING(host.hostname) != \\"\\")
      AND @timestamp >= TO_DATETIME(\\"2022-01-01T06:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T12:00:00.000Z\\")
| EVAL _src_entity_source0 = MV_FIRST(TO_STRING(event.module)),
 _src_entity_source1 = MV_FIRST(TO_STRING(event.dataset)),
 _src_entity_source2 = MV_FIRST(TO_STRING(data_stream.dataset)),
 _src_entity_source = COALESCE(CASE(_src_entity_source0 IS NOT NULL AND _src_entity_source0 != \\"\\", _src_entity_source0), CASE(_src_entity_source1 IS NOT NULL AND _src_entity_source1 != \\"\\", _src_entity_source1), CASE(_src_entity_source2 IS NOT NULL AND _src_entity_source2 != \\"\\", _src_entity_source2)),
 entity.source = CASE(_src_entity_source IS NULL OR _src_entity_source == \\"\\", NULL, _src_entity_source),
 host_id_present = TO_STRING(host.id) IS NOT NULL AND TO_STRING(host.id) != \\"\\",
 host_name_present = TO_STRING(host.name) IS NOT NULL AND TO_STRING(host.name) != \\"\\",
 host_hostname_present = TO_STRING(host.hostname) IS NOT NULL AND TO_STRING(host.hostname) != \\"\\",
 host_id_present_or_null = CASE(host_id_present, TO_STRING(host.id)),
 host_name_present_or_null = CASE(host_name_present, TO_STRING(host.name)),
 host_hostname_present_or_null = CASE(host_hostname_present, TO_STRING(host.hostname)),
 entity.id = CONCAT(\\"host:\\", COALESCE(host_id_present_or_null, host_name_present_or_null, host_hostname_present_or_null))
| STATS
    @timestamp = MAX(@timestamp),
    entity.EngineMetadata.FirstSeenLogInPage = MIN(@timestamp),
    entity.name = LAST(TO_STRING(host.name), @timestamp) WHERE TO_STRING(host.name) IS NOT NULL,
 host.entity.id = FIRST(TO_STRING(host.entity.id), @timestamp) WHERE TO_STRING(host.entity.id) IS NOT NULL,
 host.name = VALUES(TO_STRING(host.name)),
 host.domain = VALUES(TO_STRING(host.domain)),
 host.hostname = VALUES(TO_STRING(host.hostname)),
 host.id = VALUES(TO_STRING(host.id)),
 host.os.name = VALUES(TO_STRING(host.os.name)),
 host.os.type = VALUES(TO_STRING(host.os.type)),
 host.ip = VALUES(TO_IP(host.ip)),
 host.mac = VALUES(TO_STRING(host.mac)),
 host.type = VALUES(TO_STRING(host.type)),
 host.architecture = VALUES(TO_STRING(host.architecture)),
 host.boot.id = LAST(TO_STRING(host.boot.id), @timestamp) WHERE TO_STRING(host.boot.id) IS NOT NULL,
 host.cpu.usage = LAST(host.cpu.usage, @timestamp) WHERE host.cpu.usage IS NOT NULL,
 host.disk.read.bytes = LAST(TO_LONG(host.disk.read.bytes), @timestamp) WHERE TO_LONG(host.disk.read.bytes) IS NOT NULL,
 host.disk.write.bytes = LAST(TO_LONG(host.disk.write.bytes), @timestamp) WHERE TO_LONG(host.disk.write.bytes) IS NOT NULL,
 host.network.egress.bytes = LAST(TO_LONG(host.network.egress.bytes), @timestamp) WHERE TO_LONG(host.network.egress.bytes) IS NOT NULL,
 host.network.egress.packets = LAST(TO_LONG(host.network.egress.packets), @timestamp) WHERE TO_LONG(host.network.egress.packets) IS NOT NULL,
 host.network.ingress.bytes = LAST(TO_LONG(host.network.ingress.bytes), @timestamp) WHERE TO_LONG(host.network.ingress.bytes) IS NOT NULL,
 host.network.ingress.packets = LAST(TO_LONG(host.network.ingress.packets), @timestamp) WHERE TO_LONG(host.network.ingress.packets) IS NOT NULL,
 host.uptime = LAST(TO_LONG(host.uptime), @timestamp) WHERE TO_LONG(host.uptime) IS NOT NULL,
 host.pid_ns_ino = LAST(TO_STRING(host.pid_ns_ino), @timestamp) WHERE TO_STRING(host.pid_ns_ino) IS NOT NULL,
 host.os.family = LAST(TO_STRING(host.os.family), @timestamp) WHERE TO_STRING(host.os.family) IS NOT NULL,
 host.os.full = LAST(TO_STRING(host.os.full), @timestamp) WHERE TO_STRING(host.os.full) IS NOT NULL,
 host.os.kernel = LAST(TO_STRING(host.os.kernel), @timestamp) WHERE TO_STRING(host.os.kernel) IS NOT NULL,
 host.os.platform = LAST(TO_STRING(host.os.platform), @timestamp) WHERE TO_STRING(host.os.platform) IS NOT NULL,
 host.os.version = LAST(TO_STRING(host.os.version), @timestamp) WHERE TO_STRING(host.os.version) IS NOT NULL,
 host.geo.city_name = LAST(TO_STRING(host.geo.city_name), @timestamp) WHERE TO_STRING(host.geo.city_name) IS NOT NULL,
 host.geo.continent_code = LAST(TO_STRING(host.geo.continent_code), @timestamp) WHERE TO_STRING(host.geo.continent_code) IS NOT NULL,
 host.geo.continent_name = LAST(TO_STRING(host.geo.continent_name), @timestamp) WHERE TO_STRING(host.geo.continent_name) IS NOT NULL,
 host.geo.country_iso_code = LAST(TO_STRING(host.geo.country_iso_code), @timestamp) WHERE TO_STRING(host.geo.country_iso_code) IS NOT NULL,
 host.geo.country_name = LAST(TO_STRING(host.geo.country_name), @timestamp) WHERE TO_STRING(host.geo.country_name) IS NOT NULL,
 host.geo.name = VALUES(TO_STRING(host.geo.name)),
 host.geo.postal_code = VALUES(TO_STRING(host.geo.postal_code)),
 host.geo.region_iso_code = VALUES(TO_STRING(host.geo.region_iso_code)),
 host.geo.region_name = VALUES(TO_STRING(host.geo.region_name)),
 host.geo.timezone = VALUES(TO_STRING(host.geo.timezone)),
 cloud.provider = LAST(TO_STRING(cloud.provider), @timestamp) WHERE TO_STRING(cloud.provider) IS NOT NULL,
 cloud.region = LAST(TO_STRING(cloud.region), @timestamp) WHERE TO_STRING(cloud.region) IS NOT NULL,
 cloud.instance.id = LAST(TO_STRING(cloud.instance.id), @timestamp) WHERE TO_STRING(cloud.instance.id) IS NOT NULL,
 cloud.machine.type = LAST(TO_STRING(cloud.machine.type), @timestamp) WHERE TO_STRING(cloud.machine.type) IS NOT NULL,
 agent.id = LAST(TO_STRING(agent.id), @timestamp) WHERE TO_STRING(agent.id) IS NOT NULL,
 agent.type = LAST(TO_STRING(agent.type), @timestamp) WHERE TO_STRING(agent.type) IS NOT NULL,
 endpoint.id = LAST(TO_STRING(endpoint.id), @timestamp) WHERE TO_STRING(endpoint.id) IS NOT NULL,
 asset.id = LAST(TO_STRING(asset.id), @timestamp) WHERE TO_STRING(asset.id) IS NOT NULL,
 asset.name = LAST(TO_STRING(asset.name), @timestamp) WHERE TO_STRING(asset.name) IS NOT NULL,
 asset.owner = LAST(TO_STRING(asset.owner), @timestamp) WHERE TO_STRING(asset.owner) IS NOT NULL,
 asset.serial_number = LAST(TO_STRING(asset.serial_number), @timestamp) WHERE TO_STRING(asset.serial_number) IS NOT NULL,
 asset.model = LAST(TO_STRING(asset.model), @timestamp) WHERE TO_STRING(asset.model) IS NOT NULL,
 asset.vendor = LAST(TO_STRING(asset.vendor), @timestamp) WHERE TO_STRING(asset.vendor) IS NOT NULL,
 asset.environment = LAST(TO_STRING(asset.environment), @timestamp) WHERE TO_STRING(asset.environment) IS NOT NULL,
 asset.criticality = LAST(TO_STRING(asset.criticality), @timestamp) WHERE TO_STRING(asset.criticality) IS NOT NULL,
 asset.business_unit = LAST(TO_STRING(asset.business_unit), @timestamp) WHERE TO_STRING(asset.business_unit) IS NOT NULL,
 entity.risk.calculated_level = LAST(TO_STRING(host.risk.calculated_level), @timestamp) WHERE TO_STRING(host.risk.calculated_level) IS NOT NULL,
 entity.risk.calculated_score = LAST(TO_DOUBLE(host.risk.calculated_score), @timestamp) WHERE TO_DOUBLE(host.risk.calculated_score) IS NOT NULL,
 entity.risk.calculated_score_norm = LAST(TO_DOUBLE(host.risk.calculated_score_norm), @timestamp) WHERE TO_DOUBLE(host.risk.calculated_score_norm) IS NOT NULL,
 event.module = VALUES(TO_STRING(event.module)),
 event.dataset = VALUES(TO_STRING(event.dataset)),
 data_stream.dataset = VALUES(TO_STRING(data_stream.dataset)),
 entity.source = VALUES(TO_STRING(entity.source)),
 entity.type = LAST(TO_STRING(host.entity.type), @timestamp) WHERE TO_STRING(host.entity.type) IS NOT NULL,
 entity.sub_type = LAST(TO_STRING(host.entity.sub_type), @timestamp) WHERE TO_STRING(host.entity.sub_type) IS NOT NULL,
 entity.url = LAST(TO_STRING(host.entity.url), @timestamp) WHERE TO_STRING(host.entity.url) IS NOT NULL,
 entity.attributes.watchlists = VALUES(TO_STRING(host.entity.attributes.watchlists)),
 entity.attributes.asset = LAST(TO_BOOLEAN(host.entity.attributes.asset), @timestamp) WHERE TO_BOOLEAN(host.entity.attributes.asset) IS NOT NULL,
 entity.attributes.managed = LAST(TO_BOOLEAN(host.entity.attributes.managed), @timestamp) WHERE TO_BOOLEAN(host.entity.attributes.managed) IS NOT NULL,
 entity.attributes.mfa_enabled = LAST(TO_BOOLEAN(host.entity.attributes.mfa_enabled), @timestamp) WHERE TO_BOOLEAN(host.entity.attributes.mfa_enabled) IS NOT NULL,
 entity.attributes.storage_class = LAST(TO_STRING(host.entity.attributes.storage_class), @timestamp) WHERE TO_STRING(host.entity.attributes.storage_class) IS NOT NULL,
 entity.attributes.permissions = VALUES(TO_STRING(host.entity.attributes.permissions)),
 entity.attributes.known_redirects = VALUES(TO_STRING(host.entity.attributes.known_redirects)),
 entity.attributes.oauth_consent_restriction = LAST(TO_STRING(host.entity.attributes.oauth_consent_restriction), @timestamp) WHERE TO_STRING(host.entity.attributes.oauth_consent_restriction) IS NOT NULL,
 entity.lifecycle.first_seen = FIRST(@timestamp, @timestamp) WHERE @timestamp IS NOT NULL,
 entity.lifecycle.last_seen = LAST(@timestamp, @timestamp) WHERE @timestamp IS NOT NULL,
 entity.lifecycle.last_activity = LAST(TO_DATETIME(host.entity.lifecycle.last_activity), @timestamp) WHERE TO_DATETIME(host.entity.lifecycle.last_activity) IS NOT NULL,
 entity.behaviors.rule_names = VALUES(TO_STRING(host.entity.behaviors.rule_names)),
 entity.behaviors.anomaly_job_ids = VALUES(TO_STRING(host.entity.behaviors.anomaly_job_ids)),
 entity.relationships.administers.raw_identifiers.host.id = VALUES(TO_STRING(host.entity.relationships.administers.host.id)),
 entity.relationships.administers.raw_identifiers.user.id = VALUES(TO_STRING(host.entity.relationships.administers.user.id)),
 entity.relationships.administers.raw_identifiers.user.email = VALUES(TO_STRING(host.entity.relationships.administers.user.email)),
 entity.relationships.administers.raw_identifiers.host.name = VALUES(TO_STRING(host.entity.relationships.administers.host.name)),
 entity.relationships.administers.raw_identifiers.user.name = VALUES(TO_STRING(host.entity.relationships.administers.user.name)),
 entity.relationships.administers.raw_identifiers.service.name = VALUES(TO_STRING(host.entity.relationships.administers.service.name)),
 entity.relationships.administers.ids = VALUES(TO_STRING(host.entity.relationships.administers.entity.id)),
 entity.relationships.communicates_with.raw_identifiers.host.id = VALUES(TO_STRING(host.entity.relationships.communicates_with.host.id)),
 entity.relationships.communicates_with.raw_identifiers.user.id = VALUES(TO_STRING(host.entity.relationships.communicates_with.user.id)),
 entity.relationships.communicates_with.raw_identifiers.user.email = VALUES(TO_STRING(host.entity.relationships.communicates_with.user.email)),
 entity.relationships.communicates_with.raw_identifiers.host.name = VALUES(TO_STRING(host.entity.relationships.communicates_with.host.name)),
 entity.relationships.communicates_with.raw_identifiers.user.name = VALUES(TO_STRING(host.entity.relationships.communicates_with.user.name)),
 entity.relationships.communicates_with.raw_identifiers.service.name = VALUES(TO_STRING(host.entity.relationships.communicates_with.service.name)),
 entity.relationships.communicates_with.ids = VALUES(TO_STRING(host.entity.relationships.communicates_with.entity.id)),
 entity.relationships.depends_on.raw_identifiers.host.id = VALUES(TO_STRING(host.entity.relationships.depends_on.host.id)),
 entity.relationships.depends_on.raw_identifiers.user.id = VALUES(TO_STRING(host.entity.relationships.depends_on.user.id)),
 entity.relationships.depends_on.raw_identifiers.user.email = VALUES(TO_STRING(host.entity.relationships.depends_on.user.email)),
 entity.relationships.depends_on.raw_identifiers.host.name = VALUES(TO_STRING(host.entity.relationships.depends_on.host.name)),
 entity.relationships.depends_on.raw_identifiers.user.name = VALUES(TO_STRING(host.entity.relationships.depends_on.user.name)),
 entity.relationships.depends_on.raw_identifiers.service.name = VALUES(TO_STRING(host.entity.relationships.depends_on.service.name)),
 entity.relationships.depends_on.ids = VALUES(TO_STRING(host.entity.relationships.depends_on.entity.id)),
 entity.relationships.owns_inferred.raw_identifiers.host.id = VALUES(TO_STRING(host.entity.relationships.owns_inferred.host.id)),
 entity.relationships.owns_inferred.raw_identifiers.user.id = VALUES(TO_STRING(host.entity.relationships.owns_inferred.user.id)),
 entity.relationships.owns_inferred.raw_identifiers.user.email = VALUES(TO_STRING(host.entity.relationships.owns_inferred.user.email)),
 entity.relationships.owns_inferred.raw_identifiers.host.name = VALUES(TO_STRING(host.entity.relationships.owns_inferred.host.name)),
 entity.relationships.owns_inferred.raw_identifiers.user.name = VALUES(TO_STRING(host.entity.relationships.owns_inferred.user.name)),
 entity.relationships.owns_inferred.raw_identifiers.service.name = VALUES(TO_STRING(host.entity.relationships.owns_inferred.service.name)),
 entity.relationships.owns_inferred.ids = VALUES(TO_STRING(host.entity.relationships.owns_inferred.entity.id)),
 entity.relationships.accesses_infrequently.raw_identifiers.host.id = VALUES(TO_STRING(host.entity.relationships.accesses_infrequently.host.id)),
 entity.relationships.accesses_infrequently.raw_identifiers.user.id = VALUES(TO_STRING(host.entity.relationships.accesses_infrequently.user.id)),
 entity.relationships.accesses_infrequently.raw_identifiers.user.email = VALUES(TO_STRING(host.entity.relationships.accesses_infrequently.user.email)),
 entity.relationships.accesses_infrequently.raw_identifiers.host.name = VALUES(TO_STRING(host.entity.relationships.accesses_infrequently.host.name)),
 entity.relationships.accesses_infrequently.raw_identifiers.user.name = VALUES(TO_STRING(host.entity.relationships.accesses_infrequently.user.name)),
 entity.relationships.accesses_infrequently.raw_identifiers.service.name = VALUES(TO_STRING(host.entity.relationships.accesses_infrequently.service.name)),
 entity.relationships.accesses_infrequently.ids = VALUES(TO_STRING(host.entity.relationships.accesses_infrequently.entity.id)),
 entity.relationships.accesses_frequently.raw_identifiers.host.id = VALUES(TO_STRING(host.entity.relationships.accesses_frequently.host.id)),
 entity.relationships.accesses_frequently.raw_identifiers.user.id = VALUES(TO_STRING(host.entity.relationships.accesses_frequently.user.id)),
 entity.relationships.accesses_frequently.raw_identifiers.user.email = VALUES(TO_STRING(host.entity.relationships.accesses_frequently.user.email)),
 entity.relationships.accesses_frequently.raw_identifiers.host.name = VALUES(TO_STRING(host.entity.relationships.accesses_frequently.host.name)),
 entity.relationships.accesses_frequently.raw_identifiers.user.name = VALUES(TO_STRING(host.entity.relationships.accesses_frequently.user.name)),
 entity.relationships.accesses_frequently.raw_identifiers.service.name = VALUES(TO_STRING(host.entity.relationships.accesses_frequently.service.name)),
 entity.relationships.accesses_frequently.ids = VALUES(TO_STRING(host.entity.relationships.accesses_frequently.entity.id)),
 entity.relationships.owns.raw_identifiers.host.id = VALUES(TO_STRING(host.entity.relationships.owns.host.id)),
 entity.relationships.owns.raw_identifiers.user.id = VALUES(TO_STRING(host.entity.relationships.owns.user.id)),
 entity.relationships.owns.raw_identifiers.user.email = VALUES(TO_STRING(host.entity.relationships.owns.user.email)),
 entity.relationships.owns.raw_identifiers.host.name = VALUES(TO_STRING(host.entity.relationships.owns.host.name)),
 entity.relationships.owns.raw_identifiers.user.name = VALUES(TO_STRING(host.entity.relationships.owns.user.name)),
 entity.relationships.owns.raw_identifiers.service.name = VALUES(TO_STRING(host.entity.relationships.owns.service.name)),
 entity.relationships.owns.ids = VALUES(TO_STRING(host.entity.relationships.owns.entity.id)),
 entity.relationships.supervises.raw_identifiers.host.id = VALUES(TO_STRING(host.entity.relationships.supervises.host.id)),
 entity.relationships.supervises.raw_identifiers.user.id = VALUES(TO_STRING(host.entity.relationships.supervises.user.id)),
 entity.relationships.supervises.raw_identifiers.user.email = VALUES(TO_STRING(host.entity.relationships.supervises.user.email)),
 entity.relationships.supervises.raw_identifiers.host.name = VALUES(TO_STRING(host.entity.relationships.supervises.host.name)),
 entity.relationships.supervises.raw_identifiers.user.name = VALUES(TO_STRING(host.entity.relationships.supervises.user.name)),
 entity.relationships.supervises.raw_identifiers.service.name = VALUES(TO_STRING(host.entity.relationships.supervises.service.name)),
 entity.relationships.supervises.ids = VALUES(TO_STRING(host.entity.relationships.supervises.entity.id)),
 entity.relationships.resolution.resolved_to = LAST(TO_STRING(host.entity.relationships.resolution.resolved_to), @timestamp) WHERE TO_STRING(host.entity.relationships.resolution.resolved_to) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_level = LAST(TO_STRING(host.entity.relationships.resolution.risk.calculated_level), @timestamp) WHERE TO_STRING(host.entity.relationships.resolution.risk.calculated_level) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_score = LAST(TO_DOUBLE(host.entity.relationships.resolution.risk.calculated_score), @timestamp) WHERE TO_DOUBLE(host.entity.relationships.resolution.risk.calculated_score) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_score_norm = LAST(TO_DOUBLE(host.entity.relationships.resolution.risk.calculated_score_norm), @timestamp) WHERE TO_DOUBLE(host.entity.relationships.resolution.risk.calculated_score_norm) IS NOT NULL
    BY entity.id
| KEEP entity*,
host*,
cloud*,
agent*,
endpoint*,
asset*,
event*,
data_stream*,
@timestamp
| SORT entity.EngineMetadata.FirstSeenLogInPage ASC, entity.id ASC
| LIMIT 10000"
`;

exports[`buildCcsLogsExtractionEsqlQuery generates expected query with pagination 1`] = `
"SET unmapped_fields=\\"nullify\\";
FROM remote:logs-*
  | WHERE
      @timestamp >= TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
      AND ((TO_STRING(event.outcome) IS NULL OR TO_STRING(event.outcome) != \\"failure\\") AND (TO_STRING(user.email) IS NOT NULL AND TO_STRING(user.email) != \\"\\" OR TO_STRING(user.id) IS NOT NULL AND TO_STRING(user.id) != \\"\\" OR TO_STRING(user.name) IS NOT NULL AND TO_STRING(user.name) != \\"\\"))
| EVAL _src_entity_source0 = MV_FIRST(TO_STRING(event.module)),
 _src_entity_source1 = MV_FIRST(TO_STRING(event.dataset)),
 _src_entity_source2 = MV_FIRST(TO_STRING(data_stream.dataset)),
 _src_entity_source = COALESCE(CASE(_src_entity_source0 IS NOT NULL AND _src_entity_source0 != \\"\\", _src_entity_source0), CASE(_src_entity_source1 IS NOT NULL AND _src_entity_source1 != \\"\\", _src_entity_source1), CASE(_src_entity_source2 IS NOT NULL AND _src_entity_source2 != \\"\\", _src_entity_source2)),
 entity.source = CASE(_src_entity_source IS NULL OR _src_entity_source == \\"\\", NULL, _src_entity_source),
 _src_entity_namespace0 = MV_FIRST(TO_STRING(event.module)),
 _src_entity_namespace1 = MV_FIRST(SPLIT(MV_FIRST(TO_STRING(data_stream.dataset)), \\".\\")),
 _src_entity_namespace = COALESCE(CASE(_src_entity_namespace0 IS NOT NULL AND _src_entity_namespace0 != \\"\\", _src_entity_namespace0), CASE(_src_entity_namespace1 IS NOT NULL AND _src_entity_namespace1 != \\"\\", _src_entity_namespace1)),
 _eval_entity_namespace_arm0 = (TO_STRING(user.name) IS NOT NULL AND TO_STRING(user.name) != \\"\\" AND TO_STRING(host.id) IS NOT NULL AND TO_STRING(host.id) != \\"\\" AND NOT (TO_STRING(user.name) IN (\\"root\\", \\"bin\\", \\"daemon\\", \\"sys\\", \\"nobody\\", \\"jenkins\\", \\"ansible\\", \\"deploy\\", \\"terraform\\", \\"gitlab-runner\\", \\"postgres\\", \\"mysql\\", \\"redis\\", \\"elasticsearch\\", \\"kafka\\", \\"admin\\", \\"operator\\", \\"service\\")) AND (MV_CONTAINS(TO_STRING(event.kind), \\"asset\\") OR NOT (MV_CONTAINS(TO_STRING(event.kind), \\"asset\\") OR (TO_STRING(event.kind) != \\"enrichment\\" OR TO_STRING(event.kind) IS NULL) AND MV_CONTAINS(TO_STRING(event.category), \\"iam\\") AND (MV_CONTAINS(TO_STRING(event.type), \\"user\\") OR MV_CONTAINS(TO_STRING(event.type), \\"creation\\") OR MV_CONTAINS(TO_STRING(event.type), \\"deletion\\") OR MV_CONTAINS(TO_STRING(event.type), \\"group\\"))))),
 entity.namespace = COALESCE(CASE(COALESCE(_eval_entity_namespace_arm0, FALSE), \\"local\\"), CASE(COALESCE(_src_entity_namespace IN (\\"okta\\", \\"entityanalytics_okta\\"), FALSE), \\"okta\\"), CASE(COALESCE(_src_entity_namespace IN (\\"azure\\", \\"entityanalytics_entra_id\\"), FALSE), \\"entra_id\\"), CASE(COALESCE(_src_entity_namespace IN (\\"o365\\", \\"o365_metrics\\"), FALSE), \\"microsoft_365\\"), CASE(COALESCE(_src_entity_namespace IN (\\"entityanalytics_ad\\"), FALSE), \\"active_directory\\"), CASE(_src_entity_namespace IS NULL OR _src_entity_namespace == \\"\\", \\"unknown\\"), _src_entity_namespace),
 user_name_present = TO_STRING(user.name) IS NOT NULL AND TO_STRING(user.name) != \\"\\",
 host_id_present = TO_STRING(host.id) IS NOT NULL AND TO_STRING(host.id) != \\"\\",
 entity_namespace_present = TO_STRING(entity.namespace) IS NOT NULL AND TO_STRING(entity.namespace) != \\"\\",
 user_email_present = TO_STRING(user.email) IS NOT NULL AND TO_STRING(user.email) != \\"\\",
 user_id_present = TO_STRING(user.id) IS NOT NULL AND TO_STRING(user.id) != \\"\\",
 user_domain_present = TO_STRING(user.domain) IS NOT NULL AND TO_STRING(user.domain) != \\"\\",
 user_name_present_or_null = CASE(user_name_present, TO_STRING(user.name)),
 host_id_present_or_null = CASE(host_id_present, TO_STRING(host.id)),
 entity_namespace_present_or_null = CASE(entity_namespace_present, TO_STRING(entity.namespace)),
 user_email_present_or_null = CASE(user_email_present, TO_STRING(user.email)),
 user_id_present_or_null = CASE(user_id_present, TO_STRING(user.id)),
 user_domain_present_or_null = CASE(user_domain_present, TO_STRING(user.domain)),
 _euid_branch_0_formula = CONCAT(user_name_present_or_null, \\"@\\", host_id_present_or_null, \\"@\\", entity_namespace_present_or_null),
 _euid_branch_0_cond = (TO_STRING(entity.namespace) == \\"local\\"),
 _euid_branch_1_formula = COALESCE(CONCAT(user_email_present_or_null, \\"@\\", entity_namespace_present_or_null), CONCAT(user_id_present_or_null, \\"@\\", entity_namespace_present_or_null), CONCAT(user_name_present_or_null, \\"@\\", user_domain_present_or_null, \\"@\\", entity_namespace_present_or_null), CONCAT(user_name_present_or_null, \\"@\\", entity_namespace_present_or_null)),
 entity.id = CONCAT(\\"user:\\", CASE(_euid_branch_0_cond, _euid_branch_0_formula,
TRUE, _euid_branch_1_formula, NULL))
| STATS
    @timestamp = MAX(@timestamp),
    entity.EngineMetadata.FirstSeenLogInPage = MIN(@timestamp),
    entity.name = LAST(TO_STRING(entity.name), @timestamp) WHERE TO_STRING(entity.name) IS NOT NULL,
 event.kind = VALUES(TO_STRING(event.kind)),
 event.category = VALUES(TO_STRING(event.category)),
 event.type = VALUES(TO_STRING(event.type)),
 event.outcome = VALUES(TO_STRING(event.outcome)),
 entity.namespace = LAST(TO_STRING(entity.namespace), @timestamp) WHERE TO_STRING(entity.namespace) IS NOT NULL,
 entity.confidence = FIRST(TO_STRING(entity.confidence), @timestamp) WHERE TO_STRING(entity.confidence) IS NOT NULL,
 user.domain = VALUES(TO_STRING(user.domain)),
 user.email = VALUES(TO_STRING(user.email)),
 user.name = LAST(TO_STRING(user.name), @timestamp) WHERE TO_STRING(user.name) IS NOT NULL,
 user.full_name = VALUES(TO_STRING(user.full_name)),
 user.hash = VALUES(TO_STRING(user.hash)),
 user.id = VALUES(TO_STRING(user.id)),
 user.roles = VALUES(TO_STRING(user.roles)),
 user.group.domain = VALUES(TO_STRING(user.group.domain)),
 user.group.id = VALUES(TO_STRING(user.group.id)),
 user.group.name = VALUES(TO_STRING(user.group.name)),
 asset.id = LAST(TO_STRING(asset.id), @timestamp) WHERE TO_STRING(asset.id) IS NOT NULL,
 asset.name = LAST(TO_STRING(asset.name), @timestamp) WHERE TO_STRING(asset.name) IS NOT NULL,
 asset.owner = LAST(TO_STRING(asset.owner), @timestamp) WHERE TO_STRING(asset.owner) IS NOT NULL,
 asset.serial_number = LAST(TO_STRING(asset.serial_number), @timestamp) WHERE TO_STRING(asset.serial_number) IS NOT NULL,
 asset.model = LAST(TO_STRING(asset.model), @timestamp) WHERE TO_STRING(asset.model) IS NOT NULL,
 asset.vendor = LAST(TO_STRING(asset.vendor), @timestamp) WHERE TO_STRING(asset.vendor) IS NOT NULL,
 asset.environment = LAST(TO_STRING(asset.environment), @timestamp) WHERE TO_STRING(asset.environment) IS NOT NULL,
 asset.criticality = LAST(TO_STRING(asset.criticality), @timestamp) WHERE TO_STRING(asset.criticality) IS NOT NULL,
 asset.business_unit = LAST(TO_STRING(asset.business_unit), @timestamp) WHERE TO_STRING(asset.business_unit) IS NOT NULL,
 entity.risk.calculated_level = LAST(TO_STRING(user.risk.calculated_level), @timestamp) WHERE TO_STRING(user.risk.calculated_level) IS NOT NULL,
 entity.risk.calculated_score = LAST(TO_DOUBLE(user.risk.calculated_score), @timestamp) WHERE TO_DOUBLE(user.risk.calculated_score) IS NOT NULL,
 entity.risk.calculated_score_norm = LAST(TO_DOUBLE(user.risk.calculated_score_norm), @timestamp) WHERE TO_DOUBLE(user.risk.calculated_score_norm) IS NOT NULL,
 event.module = VALUES(TO_STRING(event.module)),
 event.dataset = VALUES(TO_STRING(event.dataset)),
 data_stream.dataset = VALUES(TO_STRING(data_stream.dataset)),
 entity.source = VALUES(TO_STRING(entity.source)),
 entity.type = LAST(TO_STRING(user.entity.type), @timestamp) WHERE TO_STRING(user.entity.type) IS NOT NULL,
 entity.sub_type = LAST(TO_STRING(user.entity.sub_type), @timestamp) WHERE TO_STRING(user.entity.sub_type) IS NOT NULL,
 entity.url = LAST(TO_STRING(user.entity.url), @timestamp) WHERE TO_STRING(user.entity.url) IS NOT NULL,
 entity.attributes.watchlists = VALUES(TO_STRING(user.entity.attributes.watchlists)),
 entity.attributes.asset = LAST(TO_BOOLEAN(user.entity.attributes.asset), @timestamp) WHERE TO_BOOLEAN(user.entity.attributes.asset) IS NOT NULL,
 entity.attributes.managed = LAST(TO_BOOLEAN(user.entity.attributes.managed), @timestamp) WHERE TO_BOOLEAN(user.entity.attributes.managed) IS NOT NULL,
 entity.attributes.mfa_enabled = LAST(TO_BOOLEAN(user.entity.attributes.mfa_enabled), @timestamp) WHERE TO_BOOLEAN(user.entity.attributes.mfa_enabled) IS NOT NULL,
 entity.attributes.storage_class = LAST(TO_STRING(user.entity.attributes.storage_class), @timestamp) WHERE TO_STRING(user.entity.attributes.storage_class) IS NOT NULL,
 entity.attributes.permissions = VALUES(TO_STRING(user.entity.attributes.permissions)),
 entity.attributes.known_redirects = VALUES(TO_STRING(user.entity.attributes.known_redirects)),
 entity.attributes.oauth_consent_restriction = LAST(TO_STRING(user.entity.attributes.oauth_consent_restriction), @timestamp) WHERE TO_STRING(user.entity.attributes.oauth_consent_restriction) IS NOT NULL,
 entity.lifecycle.first_seen = FIRST(@timestamp, @timestamp) WHERE @timestamp IS NOT NULL,
 entity.lifecycle.last_seen = LAST(@timestamp, @timestamp) WHERE @timestamp IS NOT NULL,
 entity.lifecycle.last_activity = LAST(TO_DATETIME(user.entity.lifecycle.last_activity), @timestamp) WHERE TO_DATETIME(user.entity.lifecycle.last_activity) IS NOT NULL,
 entity.behaviors.rule_names = VALUES(TO_STRING(user.entity.behaviors.rule_names)),
 entity.behaviors.anomaly_job_ids = VALUES(TO_STRING(user.entity.behaviors.anomaly_job_ids)),
 entity.relationships.administers.raw_identifiers.host.id = VALUES(TO_STRING(user.entity.relationships.administers.host.id)),
 entity.relationships.administers.raw_identifiers.user.id = VALUES(TO_STRING(user.entity.relationships.administers.user.id)),
 entity.relationships.administers.raw_identifiers.user.email = VALUES(TO_STRING(user.entity.relationships.administers.user.email)),
 entity.relationships.administers.raw_identifiers.host.name = VALUES(TO_STRING(user.entity.relationships.administers.host.name)),
 entity.relationships.administers.raw_identifiers.user.name = VALUES(TO_STRING(user.entity.relationships.administers.user.name)),
 entity.relationships.administers.raw_identifiers.service.name = VALUES(TO_STRING(user.entity.relationships.administers.service.name)),
 entity.relationships.administers.ids = VALUES(TO_STRING(user.entity.relationships.administers.entity.id)),
 entity.relationships.communicates_with.raw_identifiers.host.id = VALUES(TO_STRING(user.entity.relationships.communicates_with.host.id)),
 entity.relationships.communicates_with.raw_identifiers.user.id = VALUES(TO_STRING(user.entity.relationships.communicates_with.user.id)),
 entity.relationships.communicates_with.raw_identifiers.user.email = VALUES(TO_STRING(user.entity.relationships.communicates_with.user.email)),
 entity.relationships.communicates_with.raw_identifiers.host.name = VALUES(TO_STRING(user.entity.relationships.communicates_with.host.name)),
 entity.relationships.communicates_with.raw_identifiers.user.name = VALUES(TO_STRING(user.entity.relationships.communicates_with.user.name)),
 entity.relationships.communicates_with.raw_identifiers.service.name = VALUES(TO_STRING(user.entity.relationships.communicates_with.service.name)),
 entity.relationships.communicates_with.ids = VALUES(TO_STRING(user.entity.relationships.communicates_with.entity.id)),
 entity.relationships.depends_on.raw_identifiers.host.id = VALUES(TO_STRING(user.entity.relationships.depends_on.host.id)),
 entity.relationships.depends_on.raw_identifiers.user.id = VALUES(TO_STRING(user.entity.relationships.depends_on.user.id)),
 entity.relationships.depends_on.raw_identifiers.user.email = VALUES(TO_STRING(user.entity.relationships.depends_on.user.email)),
 entity.relationships.depends_on.raw_identifiers.host.name = VALUES(TO_STRING(user.entity.relationships.depends_on.host.name)),
 entity.relationships.depends_on.raw_identifiers.user.name = VALUES(TO_STRING(user.entity.relationships.depends_on.user.name)),
 entity.relationships.depends_on.raw_identifiers.service.name = VALUES(TO_STRING(user.entity.relationships.depends_on.service.name)),
 entity.relationships.depends_on.ids = VALUES(TO_STRING(user.entity.relationships.depends_on.entity.id)),
 entity.relationships.owns_inferred.raw_identifiers.host.id = VALUES(TO_STRING(user.entity.relationships.owns_inferred.host.id)),
 entity.relationships.owns_inferred.raw_identifiers.user.id = VALUES(TO_STRING(user.entity.relationships.owns_inferred.user.id)),
 entity.relationships.owns_inferred.raw_identifiers.user.email = VALUES(TO_STRING(user.entity.relationships.owns_inferred.user.email)),
 entity.relationships.owns_inferred.raw_identifiers.host.name = VALUES(TO_STRING(user.entity.relationships.owns_inferred.host.name)),
 entity.relationships.owns_inferred.raw_identifiers.user.name = VALUES(TO_STRING(user.entity.relationships.owns_inferred.user.name)),
 entity.relationships.owns_inferred.raw_identifiers.service.name = VALUES(TO_STRING(user.entity.relationships.owns_inferred.service.name)),
 entity.relationships.owns_inferred.ids = VALUES(TO_STRING(user.entity.relationships.owns_inferred.entity.id)),
 entity.relationships.accesses_infrequently.raw_identifiers.host.id = VALUES(TO_STRING(user.entity.relationships.accesses_infrequently.host.id)),
 entity.relationships.accesses_infrequently.raw_identifiers.user.id = VALUES(TO_STRING(user.entity.relationships.accesses_infrequently.user.id)),
 entity.relationships.accesses_infrequently.raw_identifiers.user.email = VALUES(TO_STRING(user.entity.relationships.accesses_infrequently.user.email)),
 entity.relationships.accesses_infrequently.raw_identifiers.host.name = VALUES(TO_STRING(user.entity.relationships.accesses_infrequently.host.name)),
 entity.relationships.accesses_infrequently.raw_identifiers.user.name = VALUES(TO_STRING(user.entity.relationships.accesses_infrequently.user.name)),
 entity.relationships.accesses_infrequently.raw_identifiers.service.name = VALUES(TO_STRING(user.entity.relationships.accesses_infrequently.service.name)),
 entity.relationships.accesses_infrequently.ids = VALUES(TO_STRING(user.entity.relationships.accesses_infrequently.entity.id)),
 entity.relationships.accesses_frequently.raw_identifiers.host.id = VALUES(TO_STRING(user.entity.relationships.accesses_frequently.host.id)),
 entity.relationships.accesses_frequently.raw_identifiers.user.id = VALUES(TO_STRING(user.entity.relationships.accesses_frequently.user.id)),
 entity.relationships.accesses_frequently.raw_identifiers.user.email = VALUES(TO_STRING(user.entity.relationships.accesses_frequently.user.email)),
 entity.relationships.accesses_frequently.raw_identifiers.host.name = VALUES(TO_STRING(user.entity.relationships.accesses_frequently.host.name)),
 entity.relationships.accesses_frequently.raw_identifiers.user.name = VALUES(TO_STRING(user.entity.relationships.accesses_frequently.user.name)),
 entity.relationships.accesses_frequently.raw_identifiers.service.name = VALUES(TO_STRING(user.entity.relationships.accesses_frequently.service.name)),
 entity.relationships.accesses_frequently.ids = VALUES(TO_STRING(user.entity.relationships.accesses_frequently.entity.id)),
 entity.relationships.owns.raw_identifiers.host.id = VALUES(TO_STRING(user.entity.relationships.owns.host.id)),
 entity.relationships.owns.raw_identifiers.user.id = VALUES(TO_STRING(user.entity.relationships.owns.user.id)),
 entity.relationships.owns.raw_identifiers.user.email = VALUES(TO_STRING(user.entity.relationships.owns.user.email)),
 entity.relationships.owns.raw_identifiers.host.name = VALUES(TO_STRING(user.entity.relationships.owns.host.name)),
 entity.relationships.owns.raw_identifiers.user.name = VALUES(TO_STRING(user.entity.relationships.owns.user.name)),
 entity.relationships.owns.raw_identifiers.service.name = VALUES(TO_STRING(user.entity.relationships.owns.service.name)),
 entity.relationships.owns.ids = VALUES(TO_STRING(user.entity.relationships.owns.entity.id)),
 entity.relationships.supervises.raw_identifiers.host.id = VALUES(TO_STRING(user.entity.relationships.supervises.host.id)),
 entity.relationships.supervises.raw_identifiers.user.id = VALUES(TO_STRING(user.entity.relationships.supervises.user.id)),
 entity.relationships.supervises.raw_identifiers.user.email = VALUES(TO_STRING(user.entity.relationships.supervises.user.email)),
 entity.relationships.supervises.raw_identifiers.host.name = VALUES(TO_STRING(user.entity.relationships.supervises.host.name)),
 entity.relationships.supervises.raw_identifiers.user.name = VALUES(TO_STRING(user.entity.relationships.supervises.user.name)),
 entity.relationships.supervises.raw_identifiers.service.name = VALUES(TO_STRING(user.entity.relationships.supervises.service.name)),
 entity.relationships.supervises.ids = VALUES(TO_STRING(user.entity.relationships.supervises.entity.id)),
 entity.relationships.resolution.resolved_to = LAST(TO_STRING(user.entity.relationships.resolution.resolved_to), @timestamp) WHERE TO_STRING(user.entity.relationships.resolution.resolved_to) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_level = LAST(TO_STRING(user.entity.relationships.resolution.risk.calculated_level), @timestamp) WHERE TO_STRING(user.entity.relationships.resolution.risk.calculated_level) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_score = LAST(TO_DOUBLE(user.entity.relationships.resolution.risk.calculated_score), @timestamp) WHERE TO_DOUBLE(user.entity.relationships.resolution.risk.calculated_score) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_score_norm = LAST(TO_DOUBLE(user.entity.relationships.resolution.risk.calculated_score_norm), @timestamp) WHERE TO_DOUBLE(user.entity.relationships.resolution.risk.calculated_score_norm) IS NOT NULL,
 host.entity.id = VALUES(TO_STRING(host.entity.id)),
 host.id = VALUES(TO_STRING(host.id)),
 host.name = LAST(TO_STRING(host.name), @timestamp) WHERE TO_STRING(host.name) IS NOT NULL
    BY entity.id
| EVAL entity.name = CASE((TO_STRING(entity.namespace) == \\"local\\" AND TO_STRING(host.name) IS NOT NULL AND TO_STRING(host.name) != \\"\\"), CONCAT(TO_STRING(user.name), \\"@\\", TO_STRING(host.name)), entity.name),
    entity.name = CASE((TO_STRING(entity.namespace) == \\"local\\" AND NOT (TO_STRING(host.name) IS NOT NULL AND TO_STRING(host.name) != \\"\\")), TO_STRING(user.name), entity.name),
    entity.name = CASE((TO_STRING(entity.namespace) != \\"local\\"), TO_STRING(user.name), entity.name),
    entity.confidence = CASE((TO_STRING(entity.namespace) != \\"local\\"), \\"high\\", entity.confidence),
    entity.confidence = CASE((TO_STRING(entity.namespace) == \\"local\\"), \\"medium\\", entity.confidence)
| KEEP entity*,
event*,
user*,
asset*,
data_stream*,
host*,
@timestamp
| SORT entity.EngineMetadata.FirstSeenLogInPage ASC, entity.id ASC
| WHERE entity.EngineMetadata.FirstSeenLogInPage > TO_DATETIME(\\"2022-01-01T12:00:00.000Z\\") 
            OR (entity.EngineMetadata.FirstSeenLogInPage == TO_DATETIME(\\"2022-01-01T12:00:00.000Z\\") 
                AND entity.id > \\"cursor-id\\")
| LIMIT 10000"
`;

exports[`buildCcsLogsExtractionEsqlQuery generates query for generic entity type 1`] = `
"SET unmapped_fields=\\"nullify\\";
FROM remote_cluster:logs-*
  | WHERE
      @timestamp >= TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
      AND ((TO_STRING(entity.id) IS NOT NULL AND TO_STRING(entity.id) != \\"\\"))
| EVAL _src_entity_source0 = MV_FIRST(TO_STRING(event.module)),
 _src_entity_source1 = MV_FIRST(TO_STRING(event.dataset)),
 _src_entity_source2 = MV_FIRST(TO_STRING(data_stream.dataset)),
 _src_entity_source = COALESCE(CASE(_src_entity_source0 IS NOT NULL AND _src_entity_source0 != \\"\\", _src_entity_source0), CASE(_src_entity_source1 IS NOT NULL AND _src_entity_source1 != \\"\\", _src_entity_source1), CASE(_src_entity_source2 IS NOT NULL AND _src_entity_source2 != \\"\\", _src_entity_source2)),
 entity.source = CASE(_src_entity_source IS NULL OR _src_entity_source == \\"\\", NULL, _src_entity_source),
 entity.id = TO_STRING(entity.id)
| STATS
    @timestamp = MAX(@timestamp),
    entity.EngineMetadata.FirstSeenLogInPage = MIN(@timestamp),
    entity.id = LAST(TO_STRING(entity.id), @timestamp) WHERE TO_STRING(entity.id) IS NOT NULL,
 entity.name = LAST(TO_STRING(entity.name), @timestamp) WHERE TO_STRING(entity.name) IS NOT NULL,
 event.module = VALUES(TO_STRING(event.module)),
 event.dataset = VALUES(TO_STRING(event.dataset)),
 data_stream.dataset = VALUES(TO_STRING(data_stream.dataset)),
 entity.source = VALUES(TO_STRING(entity.source)),
 entity.type = LAST(TO_STRING(entity.type), @timestamp) WHERE TO_STRING(entity.type) IS NOT NULL,
 entity.sub_type = LAST(TO_STRING(entity.sub_type), @timestamp) WHERE TO_STRING(entity.sub_type) IS NOT NULL,
 entity.url = LAST(TO_STRING(entity.url), @timestamp) WHERE TO_STRING(entity.url) IS NOT NULL,
 entity.attributes.watchlists = VALUES(TO_STRING(entity.attributes.watchlists)),
 entity.attributes.asset = LAST(TO_BOOLEAN(entity.attributes.asset), @timestamp) WHERE TO_BOOLEAN(entity.attributes.asset) IS NOT NULL,
 entity.attributes.managed = LAST(TO_BOOLEAN(entity.attributes.managed), @timestamp) WHERE TO_BOOLEAN(entity.attributes.managed) IS NOT NULL,
 entity.attributes.mfa_enabled = LAST(TO_BOOLEAN(entity.attributes.mfa_enabled), @timestamp) WHERE TO_BOOLEAN(entity.attributes.mfa_enabled) IS NOT NULL,
 entity.attributes.storage_class = LAST(TO_STRING(entity.attributes.storage_class), @timestamp) WHERE TO_STRING(entity.attributes.storage_class) IS NOT NULL,
 entity.attributes.permissions = VALUES(TO_STRING(entity.attributes.permissions)),
 entity.attributes.known_redirects = VALUES(TO_STRING(entity.attributes.known_redirects)),
 entity.attributes.oauth_consent_restriction = LAST(TO_STRING(entity.attributes.oauth_consent_restriction), @timestamp) WHERE TO_STRING(entity.attributes.oauth_consent_restriction) IS NOT NULL,
 entity.lifecycle.first_seen = FIRST(@timestamp, @timestamp) WHERE @timestamp IS NOT NULL,
 entity.lifecycle.last_seen = LAST(@timestamp, @timestamp) WHERE @timestamp IS NOT NULL,
 entity.lifecycle.last_activity = LAST(TO_DATETIME(entity.lifecycle.last_activity), @timestamp) WHERE TO_DATETIME(entity.lifecycle.last_activity) IS NOT NULL,
 entity.behaviors.rule_names = VALUES(TO_STRING(entity.behaviors.rule_names)),
 entity.behaviors.anomaly_job_ids = VALUES(TO_STRING(entity.behaviors.anomaly_job_ids)),
 entity.relationships.administers.raw_identifiers.host.id = VALUES(TO_STRING(entity.relationships.administers.host.id)),
 entity.relationships.administers.raw_identifiers.user.id = VALUES(TO_STRING(entity.relationships.administers.user.id)),
 entity.relationships.administers.raw_identifiers.user.email = VALUES(TO_STRING(entity.relationships.administers.user.email)),
 entity.relationships.administers.raw_identifiers.host.name = VALUES(TO_STRING(entity.relationships.administers.host.name)),
 entity.relationships.administers.raw_identifiers.user.name = VALUES(TO_STRING(entity.relationships.administers.user.name)),
 entity.relationships.administers.raw_identifiers.service.name = VALUES(TO_STRING(entity.relationships.administers.service.name)),
 entity.relationships.administers.ids = VALUES(TO_STRING(entity.relationships.administers.entity.id)),
 entity.relationships.communicates_with.raw_identifiers.host.id = VALUES(TO_STRING(entity.relationships.communicates_with.host.id)),
 entity.relationships.communicates_with.raw_identifiers.user.id = VALUES(TO_STRING(entity.relationships.communicates_with.user.id)),
 entity.relationships.communicates_with.raw_identifiers.user.email = VALUES(TO_STRING(entity.relationships.communicates_with.user.email)),
 entity.relationships.communicates_with.raw_identifiers.host.name = VALUES(TO_STRING(entity.relationships.communicates_with.host.name)),
 entity.relationships.communicates_with.raw_identifiers.user.name = VALUES(TO_STRING(entity.relationships.communicates_with.user.name)),
 entity.relationships.communicates_with.raw_identifiers.service.name = VALUES(TO_STRING(entity.relationships.communicates_with.service.name)),
 entity.relationships.communicates_with.ids = VALUES(TO_STRING(entity.relationships.communicates_with.entity.id)),
 entity.relationships.depends_on.raw_identifiers.host.id = VALUES(TO_STRING(entity.relationships.depends_on.host.id)),
 entity.relationships.depends_on.raw_identifiers.user.id = VALUES(TO_STRING(entity.relationships.depends_on.user.id)),
 entity.relationships.depends_on.raw_identifiers.user.email = VALUES(TO_STRING(entity.relationships.depends_on.user.email)),
 entity.relationships.depends_on.raw_identifiers.host.name = VALUES(TO_STRING(entity.relationships.depends_on.host.name)),
 entity.relationships.depends_on.raw_identifiers.user.name = VALUES(TO_STRING(entity.relationships.depends_on.user.name)),
 entity.relationships.depends_on.raw_identifiers.service.name = VALUES(TO_STRING(entity.relationships.depends_on.service.name)),
 entity.relationships.depends_on.ids = VALUES(TO_STRING(entity.relationships.depends_on.entity.id)),
 entity.relationships.owns_inferred.raw_identifiers.host.id = VALUES(TO_STRING(entity.relationships.owns_inferred.host.id)),
 entity.relationships.owns_inferred.raw_identifiers.user.id = VALUES(TO_STRING(entity.relationships.owns_inferred.user.id)),
 entity.relationships.owns_inferred.raw_identifiers.user.email = VALUES(TO_STRING(entity.relationships.owns_inferred.user.email)),
 entity.relationships.owns_inferred.raw_identifiers.host.name = VALUES(TO_STRING(entity.relationships.owns_inferred.host.name)),
 entity.relationships.owns_inferred.raw_identifiers.user.name = VALUES(TO_STRING(entity.relationships.owns_inferred.user.name)),
 entity.relationships.owns_inferred.raw_identifiers.service.name = VALUES(TO_STRING(entity.relationships.owns_inferred.service.name)),
 entity.relationships.owns_inferred.ids = VALUES(TO_STRING(entity.relationships.owns_inferred.entity.id)),
 entity.relationships.accesses_infrequently.raw_identifiers.host.id = VALUES(TO_STRING(entity.relationships.accesses_infrequently.host.id)),
 entity.relationships.accesses_infrequently.raw_identifiers.user.id = VALUES(TO_STRING(entity.relationships.accesses_infrequently.user.id)),
 entity.relationships.accesses_infrequently.raw_identifiers.user.email = VALUES(TO_STRING(entity.relationships.accesses_infrequently.user.email)),
 entity.relationships.accesses_infrequently.raw_identifiers.host.name = VALUES(TO_STRING(entity.relationships.accesses_infrequently.host.name)),
 entity.relationships.accesses_infrequently.raw_identifiers.user.name = VALUES(TO_STRING(entity.relationships.accesses_infrequently.user.name)),
 entity.relationships.accesses_infrequently.raw_identifiers.service.name = VALUES(TO_STRING(entity.relationships.accesses_infrequently.service.name)),
 entity.relationships.accesses_infrequently.ids = VALUES(TO_STRING(entity.relationships.accesses_infrequently.entity.id)),
 entity.relationships.accesses_frequently.raw_identifiers.host.id = VALUES(TO_STRING(entity.relationships.accesses_frequently.host.id)),
 entity.relationships.accesses_frequently.raw_identifiers.user.id = VALUES(TO_STRING(entity.relationships.accesses_frequently.user.id)),
 entity.relationships.accesses_frequently.raw_identifiers.user.email = VALUES(TO_STRING(entity.relationships.accesses_frequently.user.email)),
 entity.relationships.accesses_frequently.raw_identifiers.host.name = VALUES(TO_STRING(entity.relationships.accesses_frequently.host.name)),
 entity.relationships.accesses_frequently.raw_identifiers.user.name = VALUES(TO_STRING(entity.relationships.accesses_frequently.user.name)),
 entity.relationships.accesses_frequently.raw_identifiers.service.name = VALUES(TO_STRING(entity.relationships.accesses_frequently.service.name)),
 entity.relationships.accesses_frequently.ids = VALUES(TO_STRING(entity.relationships.accesses_frequently.entity.id)),
 entity.relationships.owns.raw_identifiers.host.id = VALUES(TO_STRING(entity.relationships.owns.host.id)),
 entity.relationships.owns.raw_identifiers.user.id = VALUES(TO_STRING(entity.relationships.owns.user.id)),
 entity.relationships.owns.raw_identifiers.user.email = VALUES(TO_STRING(entity.relationships.owns.user.email)),
 entity.relationships.owns.raw_identifiers.host.name = VALUES(TO_STRING(entity.relationships.owns.host.name)),
 entity.relationships.owns.raw_identifiers.user.name = VALUES(TO_STRING(entity.relationships.owns.user.name)),
 entity.relationships.owns.raw_identifiers.service.name = VALUES(TO_STRING(entity.relationships.owns.service.name)),
 entity.relationships.owns.ids = VALUES(TO_STRING(entity.relationships.owns.entity.id)),
 entity.relationships.supervises.raw_identifiers.host.id = VALUES(TO_STRING(entity.relationships.supervises.host.id)),
 entity.relationships.supervises.raw_identifiers.user.id = VALUES(TO_STRING(entity.relationships.supervises.user.id)),
 entity.relationships.supervises.raw_identifiers.user.email = VALUES(TO_STRING(entity.relationships.supervises.user.email)),
 entity.relationships.supervises.raw_identifiers.host.name = VALUES(TO_STRING(entity.relationships.supervises.host.name)),
 entity.relationships.supervises.raw_identifiers.user.name = VALUES(TO_STRING(entity.relationships.supervises.user.name)),
 entity.relationships.supervises.raw_identifiers.service.name = VALUES(TO_STRING(entity.relationships.supervises.service.name)),
 entity.relationships.supervises.ids = VALUES(TO_STRING(entity.relationships.supervises.entity.id)),
 entity.relationships.resolution.resolved_to = LAST(TO_STRING(entity.relationships.resolution.resolved_to), @timestamp) WHERE TO_STRING(entity.relationships.resolution.resolved_to) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_level = LAST(TO_STRING(entity.relationships.resolution.risk.calculated_level), @timestamp) WHERE TO_STRING(entity.relationships.resolution.risk.calculated_level) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_score = LAST(TO_DOUBLE(entity.relationships.resolution.risk.calculated_score), @timestamp) WHERE TO_DOUBLE(entity.relationships.resolution.risk.calculated_score) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_score_norm = LAST(TO_DOUBLE(entity.relationships.resolution.risk.calculated_score_norm), @timestamp) WHERE TO_DOUBLE(entity.relationships.resolution.risk.calculated_score_norm) IS NOT NULL,
 cloud.account.id = LAST(TO_STRING(cloud.account.id), @timestamp) WHERE TO_STRING(cloud.account.id) IS NOT NULL,
 cloud.account.name = LAST(TO_STRING(cloud.account.name), @timestamp) WHERE TO_STRING(cloud.account.name) IS NOT NULL,
 cloud.availability_zone = LAST(TO_STRING(cloud.availability_zone), @timestamp) WHERE TO_STRING(cloud.availability_zone) IS NOT NULL,
 cloud.instance.id = LAST(TO_STRING(cloud.instance.id), @timestamp) WHERE TO_STRING(cloud.instance.id) IS NOT NULL,
 cloud.instance.name = LAST(TO_STRING(cloud.instance.name), @timestamp) WHERE TO_STRING(cloud.instance.name) IS NOT NULL,
 cloud.machine.type = LAST(TO_STRING(cloud.machine.type), @timestamp) WHERE TO_STRING(cloud.machine.type) IS NOT NULL,
 cloud.project.id = LAST(TO_STRING(cloud.project.id), @timestamp) WHERE TO_STRING(cloud.project.id) IS NOT NULL,
 cloud.project.name = LAST(TO_STRING(cloud.project.name), @timestamp) WHERE TO_STRING(cloud.project.name) IS NOT NULL,
 cloud.provider = LAST(TO_STRING(cloud.provider), @timestamp) WHERE TO_STRING(cloud.provider) IS NOT NULL,
 cloud.region = LAST(TO_STRING(cloud.region), @timestamp) WHERE TO_STRING(cloud.region) IS NOT NULL,
 cloud.service.name = LAST(TO_STRING(cloud.service.name), @timestamp) WHERE TO_STRING(cloud.service.name) IS NOT NULL,
 orchestrator.api_version = LAST(TO_STRING(orchestrator.api_version), @timestamp) WHERE TO_STRING(orchestrator.api_version) IS NOT NULL,
 orchestrator.cluster.id = LAST(TO_STRING(orchestrator.cluster.id), @timestamp) WHERE TO_STRING(orchestrator.cluster.id) IS NOT NULL,
 orchestrator.cluster.name = LAST(TO_STRING(orchestrator.cluster.name), @timestamp) WHERE TO_STRING(orchestrator.cluster.name) IS NOT NULL,
 orchestrator.cluster.url = LAST(TO_STRING(orchestrator.cluster.url), @timestamp) WHERE TO_STRING(orchestrator.cluster.url) IS NOT NULL,
 orchestrator.cluster.version = LAST(TO_STRING(orchestrator.cluster.version), @timestamp) WHERE TO_STRING(orchestrator.cluster.version) IS NOT NULL,
 orchestrator.namespace = LAST(TO_STRING(orchestrator.namespace), @timestamp) WHERE TO_STRING(orchestrator.namespace) IS NOT NULL,
 orchestrator.organization = LAST(TO_STRING(orchestrator.organization), @timestamp) WHERE TO_STRING(orchestrator.organization) IS NOT NULL,
 orchestrator.resource.annotation = LAST(TO_STRING(orchestrator.resource.annotation), @timestamp) WHERE TO_STRING(orchestrator.resource.annotation) IS NOT NULL,
 orchestrator.resource.id = LAST(TO_STRING(orchestrator.resource.id), @timestamp) WHERE TO_STRING(orchestrator.resource.id) IS NOT NULL,
 orchestrator.resource.ip = LAST(TO_IP(orchestrator.resource.ip), @timestamp) WHERE TO_IP(orchestrator.resource.ip) IS NOT NULL,
 orchestrator.resource.label = LAST(TO_STRING(orchestrator.resource.label), @timestamp) WHERE TO_STRING(orchestrator.resource.label) IS NOT NULL,
 orchestrator.resource.name = LAST(TO_STRING(orchestrator.resource.name), @timestamp) WHERE TO_STRING(orchestrator.resource.name) IS NOT NULL,
 orchestrator.resource.parent.type = LAST(TO_STRING(orchestrator.resource.parent.type), @timestamp) WHERE TO_STRING(orchestrator.resource.parent.type) IS NOT NULL,
 orchestrator.resource.type = LAST(TO_STRING(orchestrator.resource.type), @timestamp) WHERE TO_STRING(orchestrator.resource.type) IS NOT NULL,
 orchestrator.type = LAST(TO_STRING(orchestrator.type), @timestamp) WHERE TO_STRING(orchestrator.type) IS NOT NULL,
 asset.id = LAST(TO_STRING(asset.id), @timestamp) WHERE TO_STRING(asset.id) IS NOT NULL,
 asset.name = LAST(TO_STRING(asset.name), @timestamp) WHERE TO_STRING(asset.name) IS NOT NULL,
 asset.owner = LAST(TO_STRING(asset.owner), @timestamp) WHERE TO_STRING(asset.owner) IS NOT NULL,
 asset.serial_number = LAST(TO_STRING(asset.serial_number), @timestamp) WHERE TO_STRING(asset.serial_number) IS NOT NULL,
 asset.model = LAST(TO_STRING(asset.model), @timestamp) WHERE TO_STRING(asset.model) IS NOT NULL,
 asset.vendor = LAST(TO_STRING(asset.vendor), @timestamp) WHERE TO_STRING(asset.vendor) IS NOT NULL,
 asset.environment = LAST(TO_STRING(asset.environment), @timestamp) WHERE TO_STRING(asset.environment) IS NOT NULL,
 asset.criticality = LAST(TO_STRING(asset.criticality), @timestamp) WHERE TO_STRING(asset.criticality) IS NOT NULL,
 asset.business_unit = LAST(TO_STRING(asset.business_unit), @timestamp) WHERE TO_STRING(asset.business_unit) IS NOT NULL,
 entity.risk.calculated_level = LAST(TO_STRING(entity.risk.calculated_level), @timestamp) WHERE TO_STRING(entity.risk.calculated_level) IS NOT NULL,
 entity.risk.calculated_score = LAST(TO_DOUBLE(entity.risk.calculated_score), @timestamp) WHERE TO_DOUBLE(entity.risk.calculated_score) IS NOT NULL,
 entity.risk.calculated_score_norm = LAST(TO_DOUBLE(entity.risk.calculated_score_norm), @timestamp) WHERE TO_DOUBLE(entity.risk.calculated_score_norm) IS NOT NULL
    BY entity.id
| KEEP entity*,
event*,
data_stream*,
cloud*,
orchestrator*,
asset*,
@timestamp
| SORT entity.EngineMetadata.FirstSeenLogInPage ASC, entity.id ASC
| LIMIT 10000"
`;
